<resources>
    <string name="app_name">SportsBuy</string>
    <string name="tv_title_create_login">Create Accound</string>
    <string name="tv_title_login">Ingresar</string>
    <string name="et_usuario">Correo</string>
    <string name="et_contraseña">Contraseña</string>
    <string name="btn_acceder">Acceder</string>
    <string name="tv_olvideContarseña">Olvide Contraseña</string>
    <string name="tv_crearCuenta">Crear Cuenta</string>

    <string name="et_CA_nombre">Nombre</string>
    <string name="et_CA_apellido">Apellido</string>
    <string name="et_CA_correo">Correo|@example.com</string>
    <string name="et_CA_contraseña">Contraseña</string>
    <string name="et_CA_telefono">Telefono</string>
    <string name="btn_CA_crearCuenta">Crear Cuenta</string>

    <string name="CV">AaBbCcDdEeFfGgHhIiJjKkLlMmNnÑñOoPpQqRrSsTtUuVvWwXxYyZz</string>
    <string name="et_CA_cedula">Cedula</string>
    <string name="CVCedula">1234567890</string>

    <string name="tv_CA_TengoCuenta">Ya tengo Una Cuenta</string>

    <string name="CVcontraseña">! " # $ % &amp; ' * +, -. / 0 1 2 3 4 5 6 7 8 9 :;= ? @ A B C D E F
        G H I J K L M N O P Q R S T U V W X Y Z \ ^ _ ` a b c d e f g h i j k l m n o p q r s t
        u v w x y z | ~</string>

    <string name="tv_TyC">Politicas de Uso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TyC_frag">El acceso a este sistema y la utilización de la clave autorizada, con llevan la aceptación del
usuario a todas las estipulaciones de este documento y las condiciones aplicables. Este
documento constituye un acuerdo para el acceso al sistema de Servicios Virtuales OBGYN SAS,
entre el paciente, intermediario o usuario, en adelante denominado el USUARIO que accede a
este servicio www.obgyn.com.co
1. Advertencia - Los términos y condiciones aquí contenidos serán de obligatorio
cumplimiento y aceptación por parte de quienes accedan a la información o realicen consulta
de resultados, que OBGYN SAS tiene disponibles. Por favor lea estos términos y condiciones
cuidadosamente. Al acceder a este sistema de operación y a cualquiera de sus páginas, el
USUARIO acepta los términos y condiciones que aparecen a continuación, así como también
aquellas obligaciones que surgen de la naturaleza de la herramienta tecnológica que se está
utilizando y de la buena fe que impone el ordenamiento jurídico colombiano. Si no está de
acuerdo con los términos y condiciones a continuación presentados, NO debe continuar y debe
SALIR del sistema.
2. Propiedad de la información – OBGYN SAS es el titular de los derechos de autor y propiedad
intelectual sobre los signos distintivos en general y marcas comerciales, contenidos en estas
páginas. Los derechos de autor sobre las páginas, las imágenes y en general todo lo que
aparece en pantalla, así como sobre la información y el material contenido en las mismas, es
propiedad de OBGYN SAS salvo indicación en contrario.
3. Carácter de la información - La información a la que el USUARIO puede acceder no puede
entenderse como una asesoría de OBGYN SAS
4. Consultas y Operaciones habilitadas - El usuario mediante la utilización de estas páginas
podrá realizar consultas de aquellos servicios de diagnóstico ginecológico y obstétrico que se
encuentren posibilitados tecnológicamente para ser accedidos por este medio, y
otras operaciones (consulta ginecológica y obstetrica).
5. Alcance de la información – OBGYN SAS ha dispuesto sus mejores esfuerzos para que la
información y los materiales aquí contenidos, incluyendo los textos, gráficos, enlaces y demás
ítems, sean idóneos para la correcta operación por parte del USUARIO. Sin embargo, OBGYN
SAS no asumirá pagos por concepto de daños directos, indirectos, accidentales,
consecuenciales, punitivos, incluyendo pérdidas y lucro cesante que subjetivamente se
imputen a (i) la información contenida en la Página Web de OBGYN SAS, (ii) cualquier
información transmitida vía la Página Web de NOMBRE DE LA EMPRESA o (iii) el
funcionamiento o no de cualquier Página Web de OBGYN SAS. OBGYN SAS no asumirá monto
alguno por daños o pérdidas de equipo o software que se imputen subjetivamente a virus,
defectos o mal funcionamiento relativos a accesos o utilización de la Página Web OBGYN SAS.
6. Acceso al sistema, código de acceso, contraseña y seguridad - El USUARIO será responsable
por la confidencialidad y uso de su número de acceso, contraseña y número de cuenta. El
USUARIO será responsable por todas las órdenes transmitidas a través de su número de
acceso, contraseña, y cualquier orden recibida por OBGYN SAS de esta manera se supondrá
emitida por el USUARIO. Todas las órdenes emitidas, se supondrán realizadas en el momento
en que sean recibidas por OBGYN SAS, salvo que el reglamento o las normas legales que
regulan cada producto o servicio, dispongan otra cosa. El USUARIO acepta que notificará a
OBGYN SAS cualquiera de las siguientes situaciones: *Pérdida o robo de su código de acceso,
contraseña y/o número de cuenta. *Uso no autorizado de su código de acceso o contraseña. *
Alguna falla, error o hecho inusual, al recibir algún mensaje relacionado con una orden iniciada
por el USUARIO a través del sistema electrónico, o que haya sido recibida y/o ejecutada a
través del mismo. * La confirmación de alguna orden que el USUARIO no emitió, o alguna
imprecisión o desacuerdo en la transmisión de la información.
7. Transmisión de datos – OBGYN SAS ha dispuesto de una organización tecnológica en
procura de que el usuario pueda efectuar la transmisión de datos a través de Internet, o
utilizando otro tipo de comunicación en red, o cualquier otra vía electrónica. Antes de
suministrar cualquier información el USUARIO deberá autorizar a OBGYN SAS para almacenar y
tratar sus datos. Dichos datos serán tratados con altas medidas de confidencialidad.
8. Terminación del acceso – OBGYN SAS se reserva el derecho de cancelar unilateralmente el
acceso a este sistema de operación y transacción en cualquier tiempo, sin que para ello tenga
que aducir alguna justa causa. La cancelación del acceso no implica la terminación de las
relaciones contractuales que tenga el USUSRIO a OBGYN SAS.
9. Modificaciones y revisiones al presente acuerdo – OBGYN SAS se reserva el derecho de
revisar el presente acuerdo en cualquier momento y de modificarlo sin previo aviso.
10. Aceptación - El acceso a este sistema y la utilización de la clave autorizada, conllevan la
aceptación del usuario a todas las estipulaciones de este acuerdo.
11. Política de manejo de la privacidad del usuario - Para conocer la política del tratamiento de
datos personales de OBGYN SAS, haga click aquí</string>


    <string name="apertura">Apertura</string>
    <string name="cierre">Cierre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>