<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_login"
        app:layout_constraintBottom_toTopOf="@+id/img_Login"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <ImageView
        android:id="@+id/img_Login"
        android:layout_width="300dp"
        android:layout_height="230dp"

        app:layout_constraintBottom_toTopOf="@+id/llLogin"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.731"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/et_correo_login"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/et_usuario"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/et_contraseña_login"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/et_contraseña"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="336dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_acceder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/btn_acceder"
        android:onClick="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogin"
        app:layout_constraintVertical_bias="0.189"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_olvideContraseña"
        android:layout_width="314dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:hint="@string/tv_olvideContarseña"
        android:onClick="olvidecontraseña"
        android:textSize="20dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_acceder"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/tv_crearCuenta"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:hint="@string/tv_crearCuenta"
        android:onClick="crearcuenta"
        android:textSize="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_olvideContraseña"
        app:layout_constraintVertical_bias="0.483" />

</androidx.constraintlayout.widget.ConstraintLayout>